fixed: Increased grow row gap& mt for media 991px

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -116,7 +116,7 @@
   .footer
     &-wrapper
       grid-template-columns: repeat(12, 1fr)
-      grid-row-gap: 40px
+      grid-row-gap: 50px
     &__logo
       grid-row: 1 / 2
       grid-column: span 3
@@ -144,6 +144,8 @@
     &__input
       &-group
         flex-basis: 48%
+    &__title
+      margin-top: 10px
   .info
     &-text
       margin-right: 50px
